# QtQuickSimplePlayer

./: CMakeLists.txt  ImageResource.qrc  MusicResource.qml  QCBottomBar.qml  QCDesktopLyric.qml  QCLeftBar.qml  QCMusicPlayer.qml  QCRightContent.qml  QCTitleBar.qml  QCTitleBarSearchBox.qml  README.md  desktoplyric.cpp  desktoplyric.h  downloadtask.cpp  downloadtask.h  downloadtaskthread.cpp  downloadtaskthread.h  framelesswindow.cpp  framelesswindow.h  imagecolor.cpp  imagecolor.h  main.cpp  main.qml  musicdownload.cpp  musicdownload.h  qctool.cpp  qctool.h
pageArtistsDetail/: AlbumsDelegate.qml  HotOneMusicDelegate.qml  pageArtistsDetail.js
pageMusicLyricDetail/: ContentItem.qml  FooterItem.qml
pageQml/: PageArtistsDetail.qml  PageEditMyPlayListDetail.qml  PageFindMusic.qml  PageHistoryRecordDetail.qml  PageLocalDownloadDetail.qml  PageLocalFolderDetail.qml  PageMusic.qml  PageMusicAlbumDetail.qml  PageMusicFavoriteDetail.qml  PageMusicLyricDetail.qml  PageMusicPlayList.qml  PageMusicPlayListDetail.qml  PageMusicSearchDetail.qml  PageMyMusicPlayListDetail.qml
pageQml/pageArtistsDetail/: FooterItem.qml  HeaderItem.qml  OneMusicMenu.qml
pageQml/pageFindMusicContent/: FindMusicNewMusicContent.qml
pageQml/pageHistoryRecordDetail/: FooterItem.qml  HeaderItem.qml  OneMusicDelegate.qml  OneMusicMenu.qml  pageHistoryRecordDetail.js
pageQml/pageLocalDownloadDetail/: FooterItem.qml  HeaderItem.qml  OneMusicDelegate.qml  OneMusicMenu.qml  pageLocalDownloadDetail.js
pageQml/pageLocalFolderDetail/: AllShowItem.qml  ContentItem.qml  FolderShowItem.qml  FooterItem.qml  HeaderItem.qml  pageLocalFolderDetail.js
pageQml/pageMusic/: HeaderItem.qml
pageQml/pageMusicAlbumDetail/: FooterItem.qml  HeaderItem.qml  OneMusicDelegate.qml  OneMusicMenu.qml  pageMusicAlbumDetail.js
pageQml/pageMusicFavoriteDetail/: FooterItem.qml  HeaderItem.qml  OneMusicDelegate.qml  OneMusicMenu.qml  pageMusicFavoriteDetail.js
pageQml/pageMusicLyricDetail/: BackgroundManager.qml  ContentItem.qml  HeaderItem.qml  LyricListView.qml
pageQml/pageMusicPlayList/: BoutiquePlayListItem.qml  ContentItem.qml  FooterItem.qml  HeaderItem.qml  OneMusicDelegate.qml  OneMusicMenu.qml  PlayListsItem.qml  pageMusicPlayList.js
pageQml/pageMusicPlayListDetail/: FooterItem.qml  HeaderItem.qml  OneMusicDelegate.qml  OneMusicMenu.qml  pageMusicPlayListDetail.js
pageQml/pageMusicSearchDetail/: AlbumDelegate.qml  ContentItem.qml  FooterItem.qml  HeaderItem.qml  OneMusicDelegate.qml  PlayListDelegate.qml  pageMusicSearchDetail.js
pageQml/pageMyMusicPlayListDetail/: FooterItem.qml  HeaderItem.qml  OneMusicDelegate.qml  OneMusicMenu.qml  pageMusicPlayListDetail.js
qcComponent/: QCCreatePlayListPopup.qml  QCDesktopLyric.qml  QCImage.qml  QCMiniPage.qml  QCPlayListLable.qml  QCScrollBar.qml  QCSelectAddPlayListPopup.qml  QCSwitchPageBar.qml  QCThemeConfigLabel.qml  QCThisPlayListLabel.qml  QCToolTipButton.qml  QCVolumeBtn.qml  RoundImage.qml  SettingInfo.qml
qcComponent/menu/: QCMenu.qml  QCMenuItem.qml
qcComponent/themeConfig/: AddThemePopup.qml  RightMenu.qml  SettingThemePopup.qml
singletonComponent/: FavoriteManager.qml  HistoryRecordManager.qml  MyPlayListManager.qml  qmldir
theme/: QCTheme.qml  QCThemeManager.qml  qmldir
